Fixed Landing Page Cropping

--- a/components/Landed/Landing.module.css
+++ b/components/Landed/Landing.module.css
@@ -1,14 +1,16 @@
 .landLogo{
     position: absolute;
     width: 430px;
-    height: 381px;
-    top: 75%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    height: 100vh;
+    align-content: space-between;
+    z-index: 5;
+}
+
+.landingLogoContainer {
     display: flex;
     flex-direction: column;
     align-items: center;
-    align-content: space-between;
+    margin: 35rem 0 0 0;
 }
 
 .logo{
@@ -76,13 +78,18 @@
     align-items: center;
 }
 
-.videoBackground{
+.videoBackground {
     position: relative;
-    width: 100%;
-    height: 100vh; /* Adjust the height as needed */
+    width: 430px;
+    height: 100vh;
+    /* Adjust the height as needed */
     overflow: hidden;
+    z-index: 0;
+    display: flex;
+    justify-content: center;
 }
-.video{
+
+.video {
     position: absolute;
     top: 0;
     left: 0;
@@ -90,6 +97,7 @@
     height: 100%;
     object-fit: cover;
 }
+
 .landSpline{
     height: 50rem;
 }
